[package]
name = "rust-rtree"
version = "0.1.0"
authors = ["Robert Buchholz <robert.buchholz@here.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs= { version= ">=0.14.0", features= ["pdf"] }
rand= "=0.4.3"
